Fix: Used Collections#emptyList instead of List#of