@@ -9,6 +9,7 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -18,7 +19,7 @@ import java.util.List;
 public class LotteryCommand extends AbstractArgCommand {
 
     public LotteryCommand() {
-        super("lottery", List.of(), null);
+        super("lottery", Collections.emptyList(), null);
     }
 
     @Override
