@@ -8,11 +8,12 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 
 public class SetLobbyCommand extends AbstractArgCommand {
     public SetLobbyCommand() {
-        super("setlobby", List.of(), "cashclash.admin");
+        super("setlobby", Collections.emptyList(), "cashclash.admin");
     }
 
     @Override
