@@ -8,11 +8,12 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 
 public class ShopCommand extends AbstractArgCommand {
     public ShopCommand() {
-        super("shop", List.of(), null);
+        super("shop", Collections.emptyList(), null);
     }
 
     @Override
